tests/expected_output/clang-6.0-x86_64-pc-linux-gnu/indirection-requires-pointer-operand.txt
tests/extracted_compile_time_tests/indirection-requires-pointer-operand.c:3:9: error: indirection requires pointer operand ('int' invalid)
        return *argc;
               ^~~~~
dcc explanation:  you are trying to use 'argc' as a pointer.
  You can not do this because 'argc' is of type int.

